update copy and fix scrollbars

--- a/app/notify/App/index.styl
+++ b/app/notify/App/index.styl
@@ -7,7 +7,7 @@ body
   font-weight 300
   background var(--ghostZ)
 
-// ::-webkit-scrollbar
-//   width 0px
-//   background transparent
+::-webkit-scrollbar
+  width 0px
+  background transparent
   
